Add framework support
- Creats a root-level framework project that builds FLEX.framework
- Adds FLEX shared scheme
- Creates a root .xcworkspace to contain both the framework and example xcproject
- Update .travis.yml to build both framework and example project
- Declares [Carthage](https://github.com/Carthage/Carthage) compatability in README

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: objective-c
-xcode_project: Example/UICatalog.xcodeproj
-xcode_scheme: UICatalog
-xcode_sdk: iphonesimulator
+xcode_workspace: FLEX.xcworkspace
+matrix:
+    include:
+        - xcode_scheme: UICatalog
+          xcode_sdk: iphonesimulator
+        - xcode_scheme: FLEX
+          xcode_sdk: iphonesimulator
