--- a/Example/UICatalog/UICatalog-Info.plist
+++ b/Example/UICatalog/UICatalog-Info.plist
@@ -29,6 +29,8 @@
 	<string>2.12</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
