OS_ACTIVITY_MODE

--- a/Example/UICatalog.xcodeproj/xcshareddata/xcschemes/UICatalog.xcscheme
+++ b/Example/UICatalog.xcodeproj/xcshareddata/xcschemes/UICatalog.xcscheme
@@ -59,6 +59,13 @@
             ReferencedContainer = "container:UICatalog.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Debug"
