Add NSPhotoLibraryAddUsageDescription to sample app

--- a/Example/UICatalog/UICatalog-Info.plist
+++ b/Example/UICatalog/UICatalog-Info.plist
@@ -29,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save photos for debugging</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
