Change OS_ACTIVITY_MODE to OS_ACTIVITY_DT_MODE
Silences annoying internal crap in the console

--- a/Example/UICatalog.xcodeproj/xcshareddata/xcschemes/UICatalog.xcscheme
+++ b/Example/UICatalog.xcodeproj/xcshareddata/xcschemes/UICatalog.xcscheme
@@ -61,9 +61,9 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "OS_ACTIVITY_MODE"
+            key = "OS_ACTIVITY_DT_MODE"
             value = "disable"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
