--- a/flexinjected/layout/DEBIAN/control
+++ b/flexinjected/layout/DEBIAN/control
@@ -1,7 +1,7 @@
 Package: com.nito.flexinjected
 Name: FLEXInjected
-Depends: mobilesubstrate, preferenceloader (>=1.5-15), applist (>=1.3-11), libflex (>=4.1.1a-1)
-Version: 1.0.0
+Depends: mobilesubstrate, preferenceloader (>=1.5-15), applist (>=1.3-11), libflex (>=4.1.1b-1)
+Version: 1.2
 Architecture: appletvos-arm64
 Description: Inject FLEX into your favorite Applications utilizing applist
 Maintainer: Kevin Bradley
