--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -2,7 +2,7 @@ Package: libflex
 Section: Development
 Maintainer: Kevin Bradley
 Architecture: appletvos-arm64
-Version: 4.1.1a-1
+Version: 4.1.1b-1
 Depends: firmware (>= 9.0), mobilesubstrate
 Description: A library for Flipboard Explorer on tvOS, alpha at best!!
 Name: libFLEX
