--- a/FLEX.xcodeproj/xcshareddata/xcschemes/FLEX-tvOS.xcscheme
+++ b/FLEX.xcodeproj/xcshareddata/xcschemes/FLEX-tvOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "323F6BC5259B9DB70055BDD6"
-               BuildableName = "FLEX-tvOS.framework"
+               BuildableName = "FLEX.framework"
                BlueprintName = "FLEX-tvOS"
                ReferencedContainer = "container:FLEX.xcodeproj">
             </BuildableReference>
@@ -51,7 +51,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "323F6BC5259B9DB70055BDD6"
-            BuildableName = "FLEX-tvOS.framework"
+            BuildableName = "FLEX.framework"
             BlueprintName = "FLEX-tvOS"
             ReferencedContainer = "container:FLEX.xcodeproj">
          </BuildableReference>
