--- a/Example/FLEXample/Supporting Files/Info.plist
+++ b/Example/FLEXample/Supporting Files/Info.plist
@@ -30,7 +30,7 @@
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
+		<true/>
 		<key>UISceneConfigurations</key>
 		<dict>
 			<key>UIWindowSceneSessionRoleApplication</key>
